--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ graphql-relay==3.2.0
 gunicorn==23.0.0
 packaging==24.1
 promise==2.3
+psycopg2==2.9.10
 python-dotenv==1.0.1
 six==1.16.0
 sqlparse==0.5.1
